Fix project card header on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -560,8 +560,17 @@ a {
   .project-card-title {
     font-size: 1.4rem;
     margin: 0;
-    display: flex;
+    display: block;
+    width: 100%;
     justify-content: space-between;
+
+    .project-card-subtitle {
+      display: inline-block;
+    }
+
+    .project-card-title-divider {
+      display: inline-block;
+    }
 
     .fork-icon {
       font-size: 1rem;
@@ -574,6 +583,7 @@ a {
       font-size: 1.25rem;
       margin-top: 3px;
       font-family: $font-family;
+      float: right;
 
       a {
         color: $primary-color;
